--- a/notebooks/01_GetTheData.ipynb
+++ b/notebooks/01_GetTheData.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -108,9 +109,6 @@
    },
    "outputs": [],
    "source": [
-    "# Get amount of features\n",
-    "features = data.columns.tolist()\n",
-    "\n",
     "# Get amount of instances\n",
     "instances = data.index.size # get actual amount of entries\n",
     "\n",
@@ -149,12 +147,52 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "# transform types into a dictionary\n",
+    "# create a dictionary for the mapping\n",
+    "type_dict = pd.Series(np.arange(0,types_amount),index=data.Type.unique()).to_dict()\n",
+    "\n",
+    "# replace Type strings according to dictionary\n",
+    "data = data.replace({\"Type\": type_dict})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# add weekdays\n",
+    "data['Weekday'] = data.Date.dt.dayofweek"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Get amount of features\n",
+    "features = data.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features(2): ['Date', 'Type']\n",
+      "Features(3): ['Date', 'Type', 'Weekday']\n",
       "Rows: 231 entries\n",
       "Time span of observations: from 2016-03-21 09:23:00 to 2016-11-11 14:44:42\n",
       "Types of coffee: 6\n"
@@ -172,14 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Save the adjusted data frame for later and further analysis\n",
-    "data.to_pickle(path=\"../data/interim/01_coffee.pkl\")"
+    "# save dataframe\n",
+    "data.to_pickle(path=\"../data/interim/01_coffee.pkl\")\n",
+    "# save dictionary\n",
+    "\n",
+    "\n",
+    "# Save\n",
+    "np.save('../data/interim/cfe_Type_dict.npy', type_dict) \n"
    ]
   }
  ],
