Updated data and Fixed a bug where data.Date column does not get converted from str to datetime; Changed seperator from ';' to ','

--- a/notebooks/01_GetTheData.ipynb
+++ b/notebooks/01_GetTheData.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -17,81 +15,24 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2016-03-21 09:23:00</td>\n",
-       "      <td>Jacobs Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-03-21 12:32:00</td>\n",
-       "      <td>Jacobs Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-03-23 09:36:00</td>\n",
-       "      <td>Jacobs Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016-03-30 08:50:00</td>\n",
-       "      <td>Jacobs Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016-03-30 10:30:00</td>\n",
-       "      <td>Jacobs Classic</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Date            Type\n",
-       "0 2016-03-21 09:23:00  Jacobs Classic\n",
-       "1 2016-03-21 12:32:00  Jacobs Classic\n",
-       "2 2016-03-23 09:36:00  Jacobs Classic\n",
-       "3 2016-03-30 08:50:00  Jacobs Classic\n",
-       "4 2016-03-30 10:30:00  Jacobs Classic"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Read data into a Dataframe\n",
     "data = pd.read_csv(\n",
     "    filepath_or_buffer='../data/raw/Data.csv',\n",
-    "    sep=';',\n",
+    "    sep=',',\n",
     "    parse_dates = ['Date'])\n",
-    "data.head()"
+    "\n",
+    "# The > parse_dates = ['Date'] < argument seems to not be working. Therefore, we need to transform the date column again\n",
+    "# http://strftime.org/  <-- placeholder reference guide\n",
+    "data.Date = pd.to_datetime(data.Date, format=\"%m/%d/%Y %H:%M:%S\") "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Gather some  meta information about the data set\n",
@@ -104,9 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get amount of instances\n",
@@ -119,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -130,7 +67,17 @@
       "['Jacobs Classic' 'San Fabio Ungesüsst'\n",
       " 'Krüger Chai latte Ingwer-Zitronengras' 'Krüger Chai latte Honig'\n",
       " 'Krüger Chai latte Classic India' 'Krüger Chai latte Classic India '\n",
-      " 'Krüger Chai latte Sweet India']\n"
+      " 'Krüger Chai latte Sweet India' 'Bellarom Latte Macchiato'\n",
+      " 'Tee Heidelbeere Vanille' 'Tee Minze-Zitrone' 'Tee Apfel' 'Tee Grüner Tee'\n",
+      " 'Maxima Cappucino Vanille' 'Tee Ostfriesen Schwarzer Tee'\n",
+      " 'Automat Cappucino' 'Tee Green Tea' 'Tee Blutorange' 'Tee Pfefferminze'\n",
+      " 'Tee Ingwer Zitrone' 'Krüger Eiskaffee' 'Bellarom Cappucino Caramello'\n",
+      " 'Automat Kaffee' 'Melitta Classico' 'Rondo Cappucino' 'Di Carlo Classico'\n",
+      " 'Krüger White-Vanille' 'Krüger Karamell-Krokant' 'Krüger Classico'\n",
+      " 'Jacobs Gold' 'Magico Cappucino Weniger Suess' 'Cafét Arrabiata'\n",
+      " 'Jacobs Krönung' 'Melitta Kaffee' 'Rondo Kaffee' 'Immergut Eiscafe'\n",
+      " 'Eduscho Gala Nr.1 Kaffee' 'Krüger Chai latte Kokos-Mandel'\n",
+      " 'Elbflorenz Gräfin Kosel Kaffee' 'Tee Apfel Minze']\n"
      ]
     }
    ],
@@ -144,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# transform types into a dictionary\n",
@@ -160,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# add weekdays\n",
@@ -172,9 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get amount of features\n",
@@ -184,18 +125,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Features(3): ['Date', 'Type', 'Weekday']\n",
-      "Rows: 231 entries\n",
-      "Time span of observations: from 2016-03-21 09:23:00 to 2016-11-11 14:44:42\n",
-      "Types of coffee: 6\n"
+      "Rows: 1098 entries\n",
+      "Time span of observations: from 2016-03-21 09:23:00 to 2019-01-11 14:06:29\n",
+      "Types of coffee: 38\n"
      ]
     }
    ],
@@ -211,9 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save the adjusted data frame for later and further analysis\n",
@@ -243,9 +180,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
